--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "class-transformer": "^0.1.7",
+    "class-validator": "^0.8.1",
     "del": "^3.0.0",
     "express": "^4.15.5",
     "gulp": "^3.9.1",
